ensure play bar is "above the fold" on small devices - closes #116, closes #109

--- a/web/static/app/modules/_episode.sass
+++ b/web/static/app/modules/_episode.sass
@@ -51,9 +51,6 @@
             > a
                 color: $green
 
-            &--has-guests
-                margin: 0
-
     &_meta
         font-size: 1.15em
         @extend %display-font
