--- a/web/static/app/modules/_hosts-list.sass
+++ b/web/static/app/modules/_hosts-list.sass
@@ -2,6 +2,13 @@
     display: block
     list-style: none
 
+    &.section
+        display: none
+        padding-top: 0
+
+        @media (min-width: $smartphone)
+            display: flex
+
     @media (min-width: $smartphone)
         align-content: center
         display: flex
@@ -18,6 +25,14 @@
         align-items: center
 
         & > img
-            flex: 0 1 auto
-            margin-right: 0.5rem
+            $size: 50px
             box-shadow: 0.33rem 0.33rem 0 $half-black
+            flex: 0 1 auto
+            height: $size
+            margin-right: 0.5rem
+            width: $size
+
+            @media (min-width: $smartphone)
+                $size: 75px
+                height: $size
+                width: $size
